# OpenAI-Agent-SDK-training

./: .env  README.md
lecture1/: pyproject.toml
lecture1/src/lecture1/: __init__.py  startup.py
