[project]
name = "lecture1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arbabmalik46", email = "arbabmalik46@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
]

[project.scripts]
mainproject = "lecture1.startup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
